--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 
-PORT=8777
+PORT=30300
 
 DBUSER='nobito'
-DBPASS='B}.U!{D}~[L%}{O}'
+DBPASS='@mir_Ghazal'
 DBNAME='nobito_Balam'
 DBNAMERep='nobito_report'
 DBHOST='185.81.99.115'
