تصحیح مسیر نمایش آگهیهای صاحب کالا

--- a/config.env
+++ b/config.env
@@ -1,11 +1,12 @@
 
 PORT=30300
 
-DBUSER='nobito'
-DBPASS='@mir_Ghazal'
-DBNAME='nobito_Balam'
-DBNAMERep='nobito_report'
-DBHOST='185.81.99.115'
+DBUSER='root'
+DBPORT='36760'
+DBPASS='GDT8UZlskMU4aXuh'
+DBNAME='nobito_balam'
+DBNAMERep='nobito_balam'
+DBHOST='services.irn5.chabokan.net'
 SMSUS=
 SMSpass=
 SMSTEl=
