--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jimp": "^0.17.9",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "moment-timezone": "^0.5.45",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.3",
