--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "agora-access-token": "^2.0.4",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -20,6 +21,8 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.45",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.3",
@@ -28,6 +31,6 @@
     "request": "^2.88.2",
     "socket.io": "^4.5.4",
     "uid": "^2.0.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.1"
   }
 }
